--- a/css/styles.css
+++ b/css/styles.css
@@ -750,3 +750,119 @@ body {
       border-radius: 4px;
       color: white;
       cursor: pointer; }
+
+.earners {
+  margin: 3rem 5rem;
+  padding: 1rem 0rem;
+  position: relative; }
+  .earners-search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 3.125rem;
+    background-color: #fff;
+    height: 3.75rem;
+    width: 3.75rem;
+    -webkit-transition: width 300ms ease-in-out;
+    -o-transition: width 300ms ease-in-out;
+    transition: width 300ms ease-in-out;
+    padding: 5px;
+    position: absolute;
+    top: 20%;
+    right: 0;
+    overflow: hidden; }
+    .earners-search__text {
+      position: absolute;
+      top: 0;
+      left: 0;
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      font-size: 1rem;
+      padding: 0 1.5rem;
+      border: 0;
+      border-radius: 3.125rem;
+      line-height: 3.75rem;
+      opacity: 0;
+      width: 86%; }
+      .earners-search__text:focus {
+        outline: 0; }
+      .earners-search__text:hover {
+        cursor: pointer; }
+    .earners-search__submit {
+      font-size: 1.2rem;
+      cursor: pointer;
+      border: 0;
+      background: transparent;
+      border-radius: 50%;
+      width: 3.125rem;
+      height: 3.125rem;
+      margin-left: auto;
+      -webkit-transition: background 150ms ease-in-out;
+      -o-transition: background 150ms ease-in-out;
+      transition: background 150ms ease-in-out; }
+    .earners-search:focus-within {
+      width: 40%; }
+      .earners-search:focus-within .earners-search__text {
+        opacity: 1;
+        cursor: initial; }
+      .earners-search:focus-within .earners-search__submit {
+        color: white;
+        background-color: #374540;
+        cursor: pointer; }
+
+.earners-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  margin-bottom: 1rem; }
+  .earners-number .fa-users {
+    padding: 0.5rem; }
+  .earners-number__total {
+    font-weight: bold; }
+
+.earners-table {
+  margin: 1rem auto;
+  padding: 1rem 2rem;
+  width: 100%;
+  max-width: 87%;
+  text-align: center;
+  border-collapse: collapse; }
+  .earners-table__header {
+    background-color: #05070d;
+    color: #fff; }
+    .earners-table__header-row th {
+      padding: 1rem 1.5rem; }
+  .earners-table__body-row {
+    background-color: #fff;
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out; }
+    .earners-table__body-row:hover {
+      background-color: #c19d38; }
+    .earners-table__body-row td {
+      padding: 0.5rem 2rem; }
+  .earners-table__body-image img {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%; }
+  .earners-table__body-button {
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    background: #19d895;
+    color: #fff;
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+    -webkit-box-shadow: 1px 2px 3px #000;
+            box-shadow: 1px 2px 3px #000; }
+    .earners-table__body-button:hover {
+      cursor: pointer; }
